# polars_address_book

./: README.md  init_db.sql  setup.sh
rust_address_book/: Cargo.toml
rust_address_book/migrations/: 20251130055145_create_contacts_table.down.sql  20251130055145_create_contacts_table.up.sql
rust_address_book/src/: main.rs
rust_address_book/src/commands/: database.rs  generate.rs  mod.rs
user_generator/: Cargo.toml
user_generator/src/: main.rs
