[package]
name = "rust_address_book"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "cargo", "env"] }
#clap = { version = "4", features = ["derive", "cargo", "env"] }
fake = "4.4.0"
polars = "0.51.0"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1", features = ["full"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"

